# qslib

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLANS.md  README.md  RELEASE_NOTES.md  SECURITY.md  book.toml  deny.toml
.agents/skills/qslib-audit-model/: SKILL.md
.agents/skills/qslib-audit-model/agents/: openai.yaml
.agents/skills/qslib-check-conformance/: SKILL.md
.agents/skills/qslib-check-conformance/agents/: openai.yaml
.agents/skills/qslib-write-physics-docs/: SKILL.md
.agents/skills/qslib-write-physics-docs/agents/: openai.yaml
.codex/agents/: qslib-architect.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: kernels.rs
crates/qslib-cli/: Cargo.toml  README.md
crates/qslib-cli/src/: lib.rs  main.rs
crates/qslib-cli/tests/: exact_gate.rs  examples.rs
crates/qslib-core/: Cargo.toml  README.md
crates/qslib-core/src/: basis.rs  error.rs  geometry.rs  identifiers.rs  interactions.rs  lib.rs  models.rs  operators.rs  randomness.rs  scalar.rs  symmetry.rs
crates/qslib-core/tests/: basis.rs  geometry.rs  interactions.rs  interoperability.rs  models.rs  operators.rs  symmetry.rs
crates/qslib-exact/: Cargo.toml  README.md
crates/qslib-exact/examples/: heterogeneous_ground_state.rs
crates/qslib-exact/src/: lib.rs
crates/qslib-exact/tests/: exact.rs
crates/qslib-io/: Cargo.toml  README.md
crates/qslib-io/examples/: io_artifacts.rs
crates/qslib-io/src/: lib.rs
crates/qslib-io/tests/: io.rs
crates/qslib-python/: Cargo.toml  PYTHON_README.md  pyproject.toml
crates/qslib-python/src/: lib.rs
crates/qslib-python/tests/: python_contract.py
crates/qslib-sse/: Cargo.toml  README.md
crates/qslib-sse/examples/: parity_fixture.rs
crates/qslib-sse/src/: legacy.rs  lib.rs  measurements.rs  model.rs  sampler.rs  state.rs
crates/qslib-sse/tests/: conformance.rs
crates/qslib-sse/tests/fixtures/: sse_parity_v1.json
crates/qslib-test-support/: Cargo.toml  README.md
crates/qslib-test-support/examples/: fixture_digests.rs
crates/qslib-test-support/src/: fixture.rs  lib.rs
crates/qslib-test-support/tests/: conventions.rs  workspace.rs
crates/qslib-variational/: Cargo.toml  README.md
crates/qslib-variational/src/: evolution.rs  lib.rs  tdvp.rs
crates/qslib-variational/tests/: evolution.rs  statistics.rs  tdvp.rs
docs/: SUMMARY.md  api-stability.md  benchmarks.md  cli.md  contribution-policy.md  conventions.md  evolution.md  exact.md  geometry-interactions.md  index.md  installation.md  io.md  limitations.md  migration-ncli.md  migration-sse.md  observables-statistics.md  operators-models.md  python.md  release-evidence.md  reproducibility.md  security-policy.md  sse.md  symmetry.md  tdvp.md  toolchain-policy.md
docs/architecture/: README.md
docs/decisions/: 0000-template.md  0001-workspace-boundaries.md  0002-linear-algebra-sparse-storage.md  0003-randomness-reproducibility.md  0004-artifacts-serialization.md  0005-python-ffi-ownership.md  0006-api-stability-and-features.md  0007-standalone-sse-migration.md  0008-repository-ownership.md  0009-registry-package-names.md  README.md
docs/governance/: code-of-conduct-decision.md
docs/plans/: qslib-v1.md
examples/: heisenberg_disordered_4.yaml  python_exact_ground_state.py  tfim_4.yaml  tfim_thermal_4.yaml
fixtures/conformance/v1/: README.md  _schema.json  basis_rotation_spectrum.json  bit_packing.json  heisenberg_heterogeneous.json  heisenberg_one_bond.json  manifest.json  observable_normalization.json  rectangular_indexing.json  rydberg_two_site.json  tfim_one_bond.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: state_conversion.rs
src/: lib.rs
tests/: facade.rs
tools/: build_docs_site.py  check_markdown_links.py  package_cli_release.py  test_distribution_contract.py  test_package_cli_release.py  verify_io_artifacts.py
