[package]
name = "qslib-quantum-cli"
description = "Physicist-first command line interface for qslib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[[bin]]
name = "qslib"
path = "src/main.rs"
doc = false

[dependencies]
qslib = { package = "qslib-quantum", version = "0.1.0", path = "../..", features = ["exact", "sse", "io"] }
