[package]
name = "qslib-quantum-cli"
description = "Physicist-first command line interface for qslib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
readme = "README.md"

[[bin]]
name = "qslib"
path = "src/main.rs"
doc = false

[lib]
name = "qslib_cli"
path = "src/lib.rs"

[dependencies]
qslib = { package = "qslib-quantum", version = "0.2.0", path = "../..", features = ["exact", "sse", "io"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
