[package]
name = "qslib-quantum-exact"
description = "Exact-basis and exact-solver capabilities for qslib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[lib]
name = "qslib_exact"

[dependencies]
qslib-core = { package = "qslib-quantum-core", version = "0.1.0", path = "../qslib-core" }
