[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "qslib-quantum"
version = "0.1.0"
description = "Python bindings for the qslib quantum simulation library"
requires-python = ">=3.12"
dependencies = ["numpy>=2.0"]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "qslib_quantum"
bindings = "pyo3"
features = ["pyo3/extension-module"]
