[package]
name = "qslib-quantum-variational"
description = "Variational statistics, TDVP, and integration kernels for qslib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[lib]
name = "qslib_variational"

[dependencies]
qslib-core = { package = "qslib-quantum-core", version = "0.1.0", path = "../qslib-core" }
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
